--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,8 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+    
+app_note_list:
+    path: '/notes/list'
+    controller: 'App\Controller\NoteController::list'
+    methods: ['GET']
